Generate Pelican site

--- a/PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html
+++ b/PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html
@@ -294,16 +294,16 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     </script>
 </div>    <h2 class="related-posts">関連する記事</h2>
         <ul>
-            <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
-            <li><a href="./4k-HD5450.html">HD5450のHDMI端子で4k 30Hz出力する方法</a></li>
+            <li><a href="./stow.html">stowでソースからmakeしたプログラムを管理する</a></li>
             <li><a href="./A_Survey_of_Methods_For_Explaining_Bloack_Box_Models.html">A Survey of Methods For Explaining Bloack Box Modelsを読んだ</a></li>
+            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
             <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
             <li><a href="./r-and-bn.html">今日のお勉強</a></li>
-            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
-            <li><a href="./ubuntu-preseed.html">UbuntuをシリアルコンソールからPreseedで自動インストールする</a></li>
-            <li><a href="./bluemix-docker.html">IBM Bluemixの無料枠でdockerコンテナホスティングサービスを利用する</a></li>
-            <li><a href="./ssh-tunneling-for-samba.html">SSHトンネル経由でWindowsからリモートのSambaサーバへ接続する方法</a></li>
-            <li><a href="./qfixhowm-pelican.html">QFixHowmでPelicanのブログ記事を書く</a></li>
+            <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
+            <li><a href="./install_dropbox_for_linux.html">UbuntuにLinux用Dropboxをインストールする</a></li>
+            <li><a href="./thinkpadx260-change-ssd.html">ThinkPad x260 のSSDを交換した</a></li>
+            <li><a href="./docker_usage.html">Dockerイメージをダウンロードしてコンテナを起動するまでの手順</a></li>
+            <li><a href="./libvirt.html">libvirt+pythonで仮想マシンのリソース消費情報を取得する</a></li>
         </ul>
     <div class="comments">
       <h2>Comments !</h2>
@@ -490,16 +490,16 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <div class="sidebar_child">
     <h3 class="sidebar_title">関連する記事</h3>
         <ul id="sidebar_related_article">
-            <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
-            <li><a href="./4k-HD5450.html">HD5450のHDMI端子で4k 30Hz出力する方法</a></li>
+            <li><a href="./stow.html">stowでソースからmakeしたプログラムを管理する</a></li>
             <li><a href="./A_Survey_of_Methods_For_Explaining_Bloack_Box_Models.html">A Survey of Methods For Explaining Bloack Box Modelsを読んだ</a></li>
+            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
             <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
             <li><a href="./r-and-bn.html">今日のお勉強</a></li>
-            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
-            <li><a href="./ubuntu-preseed.html">UbuntuをシリアルコンソールからPreseedで自動インストールする</a></li>
-            <li><a href="./bluemix-docker.html">IBM Bluemixの無料枠でdockerコンテナホスティングサービスを利用する</a></li>
-            <li><a href="./ssh-tunneling-for-samba.html">SSHトンネル経由でWindowsからリモートのSambaサーバへ接続する方法</a></li>
-            <li><a href="./qfixhowm-pelican.html">QFixHowmでPelicanのブログ記事を書く</a></li>
+            <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
+            <li><a href="./install_dropbox_for_linux.html">UbuntuにLinux用Dropboxをインストールする</a></li>
+            <li><a href="./thinkpadx260-change-ssd.html">ThinkPad x260 のSSDを交換した</a></li>
+            <li><a href="./docker_usage.html">Dockerイメージをダウンロードしてコンテナを起動するまでの手順</a></li>
+            <li><a href="./libvirt.html">libvirt+pythonで仮想マシンのリソース消費情報を取得する</a></li>
         </ul>
     </div>
 </div>        </div>
