--- a/A_Survey_of_Methods_For_Explaining_Bloack_Box_Models.html
+++ b/A_Survey_of_Methods_For_Explaining_Bloack_Box_Models.html
@@ -290,16 +290,16 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     </script>
 </div>    <h2 class="related-posts">関連する記事</h2>
         <ul>
-            <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
-            <li><a href="./PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html">PALM_Machine_Learning_Explanations_for_Iterative_Debugging</a></li>
-            <li><a href="./using-mathjax.html">PelicanでMathJaxを使って数式を表示する</a></li>
-            <li><a href="./install-nvenc-on-ubunu.html">UbuntuにNVENCをインストールしてエンコードしてみる</a></li>
-            <li><a href="./raspi-wifi.html">Raspberry Pi3 Bで802.11ACな安物無線LANアダプタを使う</a></li>
-            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
             <li><a href="./r-and-bn.html">今日のお勉強</a></li>
+            <li><a href="./PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html">PALM_Machine_Learning_Explanations_for_Iterative_Debugging</a></li>
+            <li><a href="./assign-ipadress-to-ovs-vswitch.html">OVSの仮想ブリッジにIPアドレスを付与する方法</a></li>
             <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
-            <li><a href="./vimperator_statusline.html">vimperatorのステーラスラインにタイトルを表示する</a></li>
-            <li><a href="./cygwin-networkfolder.html">CygwinでNetwork Folderにアクセスする</a></li>
+            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
+            <li><a href="./cygiwn-rsync-network.html">cygiwnでrsyncの差分バックアップ</a></li>
+            <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
+            <li><a href="./cygwin-procps.html">cygwinでwatchコマンドはprocpsパッケージでインストールする</a></li>
+            <li><a href="./pelican_multisite.html">Pelicanで複数のサイトを生成・管理する</a></li>
+            <li><a href="./ubuntu-preseed.html">UbuntuをシリアルコンソールからPreseedで自動インストールする</a></li>
         </ul>
     <div class="comments">
       <h2>Comments !</h2>
@@ -486,16 +486,16 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <div class="sidebar_child">
     <h3 class="sidebar_title">関連する記事</h3>
         <ul id="sidebar_related_article">
-            <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
-            <li><a href="./PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html">PALM_Machine_Learning_Explanations_for_Iterative_Debugging</a></li>
-            <li><a href="./using-mathjax.html">PelicanでMathJaxを使って数式を表示する</a></li>
-            <li><a href="./install-nvenc-on-ubunu.html">UbuntuにNVENCをインストールしてエンコードしてみる</a></li>
-            <li><a href="./raspi-wifi.html">Raspberry Pi3 Bで802.11ACな安物無線LANアダプタを使う</a></li>
-            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
             <li><a href="./r-and-bn.html">今日のお勉強</a></li>
+            <li><a href="./PALM_Machine_Learning_Explanations_for_Iterative_Debugging.html">PALM_Machine_Learning_Explanations_for_Iterative_Debugging</a></li>
+            <li><a href="./assign-ipadress-to-ovs-vswitch.html">OVSの仮想ブリッジにIPアドレスを付与する方法</a></li>
             <li><a href="./ubuntu-nvidia-gt1050ti.html">Ubuntu16.04にGeforge GTX 1050tiをインストールし，TensoFlowの処理を高速化してみた</a></li>
-            <li><a href="./vimperator_statusline.html">vimperatorのステーラスラインにタイトルを表示する</a></li>
-            <li><a href="./cygwin-networkfolder.html">CygwinでNetwork Folderにアクセスする</a></li>
+            <li><a href="./dataversioncontrol.html">機械学習のデータセットをGitライクにバージョン管理するDataVersionControlを試す</a></li>
+            <li><a href="./cygiwn-rsync-network.html">cygiwnでrsyncの差分バックアップ</a></li>
+            <li><a href="./gensim-install.html">Ubuntuへのgensimのinstall</a></li>
+            <li><a href="./cygwin-procps.html">cygwinでwatchコマンドはprocpsパッケージでインストールする</a></li>
+            <li><a href="./pelican_multisite.html">Pelicanで複数のサイトを生成・管理する</a></li>
+            <li><a href="./ubuntu-preseed.html">UbuntuをシリアルコンソールからPreseedで自動インストールする</a></li>
         </ul>
     </div>
 </div>        </div>
